# cargo-nuget

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: README.md  cleanup.sh  test.sh
ci/linux/: Dockerfile  Dockerfile.part  setup.sh  test.sh
ci/osx/: setup.sh  test.sh
ci/win/: Dockerfile  cleanup.ps1  setup.ps1  test.ps1
src/: args.rs  cross.rs  logger.rs  macros.rs  main.rs  pack.rs
src/cargo/: build.rs  build_local.rs  mod.rs  parse.rs  version.rs
src/cargo/parse/: mod.rs  version.rs
src/nuget/: format.rs  mod.rs  pack.rs  save.rs  spec.rs
src/nuget/pack/: mod.rs  openxml.rs
src/nuget/util/: mod.rs  openxml.rs  xml.rs
src/test_utils/: mod.rs
tests/: .gitignore  README.md  test.ps1  test.sh
tests/dotnet/: Nuget.Config  Program.cs  dotnet.csproj
tests/feed/: readme.md
tests/native/: Cargo.toml
tests/native/src/: lib.rs
