[package]
name = "cargo-nuget"
version = "0.0.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
description = "Bundle Rust libraries as Nuget packages"
repository = "https://github.com/KodrAus/nuget-rs"
license = "MIT"

[dependencies]
quick-error = "~1.1.0"
clap = "~2.21.0"
term-painter = "~0.2.3"
toml = { version = "~0.2.1", features = ["serde"], default-features = false }
xml-rs = "~0.3.5"
zip = "~0.2"
chrono = "~0.3"
semver = "~0.6.0"
