[package]
name = "cargo-nuget"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
description = "Bundle Rust libraries as Nuget packages"
repository = "https://github.com/KodrAus/nuget-rs"
license = "MIT"

[dependencies]
quick-error = "~1.1"
clap = "~2.21"
term-painter = "~0.2"
toml = { version = "~0.2", features = ["serde"], default-features = false }
xml-rs = "~0.3"
zip = "~0.2"
chrono = "~0.3"
semver = "~0.6"
log = { git = "https://github.com/rust-lang-nursery/log.git", features = ["std"] }
lazy_static = "*"
